html logo prueba

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav class="Navigator">
-        <img class="Navigator-logo" src="./images/logo.svg" alt="Logopodcast">
+        <img class="Navigator-logo" src="images/logo.svg" alt="Logopodcast">
         <input id="menu-flag" class="Navigator-hiddenAction" type="checkbox" />
         <ul class="Navigator-items">
             <li class="Navigator-item"><a class="Navigator-link" href="#episodes">EPISODIOS</a></li>
