--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <section class="Container-imgcontainer">
 
             <div class="Container-item3">
-                <img src="/images/phone.png" alt="PhotoImage" class="item3-phone">
+                <img src="images/phone.png" alt="PhotoImage" class="item3-phone">
             </div>
 
             <div class="Container-item4">
@@ -144,15 +144,15 @@
             </div>
 
             <div class="item5-image">
-                <img src="/images/grace-hopper.png" alt="grace-hopper" class="item5-invitadas">
-                <img src="/images/Katie-Bouman.png" alt="Katie-Bouman" class="item5-invitadas">
-                <img src="/images/Margaret_Hamilton.png" alt="Margaret_Hamilton" class="item5-invitadas">
-                <img src="/images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
+                <img src="images/grace-hopper.png" alt="grace-hopper" class="item5-invitadas">
+                <img src="images/Katie-Bouman.png" alt="Katie-Bouman" class="item5-invitadas">
+                <img src="images/Margaret_Hamilton.png" alt="Margaret_Hamilton" class="item5-invitadas">
+                <img src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
                     alt="Computer operators with an Eniac — the world’s first programmable general-purpose computer"
                     class="item5-invitadas">
-                <img src="/images/An E.R.A.Univac 1103 computer in the 1950s.png"
+                <img src="images/An E.R.A.Univac 1103 computer in the 1950s.png"
                     alt="n E.R.A.Univac 1103 computer in the 1950s" class="item5-invitadas">
-                <img src="/images/susan-kare.png" alt="susan-kare" class="item5-invitadas">
+                <img src="images/susan-kare.png" alt="susan-kare" class="item5-invitadas">
             </div>
         </section>
 
@@ -170,21 +170,21 @@
 
             <div class="logos">
                 <div class="item6-logos1">
-                    <img src="/images/icon1.svg" alt="icon1">
+                    <img src="images/icon1.svg" alt="icon1">
                     <h1 class="text5">Trabajo remoto</h1>
                 </div>
                 <div class="item6-logos2">
-                    <img src="/images/icon2.svg" alt="icon2">
+                    <img src="images/icon2.svg" alt="icon2">
                     <h1 class="text5">Repensado la <br>
                         programación
                     </h1>
                 </div>
                 <div class="item6-logos3">
-                    <img src="/images/icon3.svg" alt="icon3">
+                    <img src="images/icon3.svg" alt="icon3">
                     <h1 class="text5">Bases del códio</h1>
                 </div>
                 <div class="item6-logos4">
-                    <img src="/images/icon4.svg" alt="icon4">
+                    <img src="images/icon4.svg" alt="icon4">
                     <h1 class="text5">Seguridad informática</h1>
                 </div>
             </div>
